--- a/MVC-PersonalSite/MVC-PersonalSite/Views/Home/Contact.cshtml
+++ b/MVC-PersonalSite/MVC-PersonalSite/Views/Home/Contact.cshtml
@@ -1,159 +1,181 @@
-﻿@{
+﻿@model MVC_PersonalSite.Models.ContactViewModel
+
+@{
     ViewData["Title"] = "Contact";
 }
 
-@*@section links {
-	<link
-		href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext"
-		rel="stylesheet">
-
-	<!-- title of site -->
-	<title>Sarra</title>
-
-	<!-- For favicon png -->
-	<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
-
-	<!--font-awesome.min.css-->
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-
-	<!--flat icon css-->
-	<link rel="stylesheet" href="assets/css/flaticon.css">
-
-	<!--animate.css-->
-	<link rel="stylesheet" href="assets/css/animate.css">
-
-	<!--owl.carousel.css-->
-	<link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-
-	<!--bootstrap.min.css-->
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
-	<!-- bootsnav -->
-	<link rel="stylesheet" href="assets/css/bootsnav.css">
-
-	<!--style.css-->
-	<link rel="stylesheet" href="assets/css/style.css">
-
-	<!--responsive.css-->
-	<link rel="stylesheet" href="assets/css/responsive.css">
-
-	<!-- custom css -->
-	<link rel="stylesheet" href="assets/css/custom.css">
-}*@
+<style>
+.footerButton {
+    display: none;
+}
+</style>
 
 <!--contact start -->
-	<section id="contact" class="contact">
-		<div class="section-heading text-center">
-			<h2>contact me</h2>
-		</div>
-		<div class="container">
-			<div class="contact-content">
-				<div class="row">
-					<div class="col-md-offset-1 col-md-5 col-sm-6">
-						<div class="single-contact-box">
-							<div class="contact-form">
-								<form>
-									<div class="row">
-										<div class="col-sm-6 col-xs-12">
-											<div class="form-group">
-												<input type="text" class="form-control" id="name" placeholder="Name*"
-													name="name">
-											</div>
-											<!--/.form-group-->
-										</div>
-										<!--/.col-->
-										<div class="col-sm-6 col-xs-12">
-											<div class="form-group">
-												<input type="email" class="form-control" id="email" placeholder="Email*"
-													name="email">
-											</div>
-											<!--/.form-group-->
-										</div>
-										<!--/.col-->
-									</div>
-									<!--/.row-->
-									<div class="row">
-										<div class="col-sm-12">
-											<div class="form-group">
-												<input type="text" class="form-control" id="subject"
-													placeholder="Subject" name="subject">
-											</div>
-											<!--/.form-group-->
-										</div>
-										<!--/.col-->
-									</div>
-									<!--/.row-->
-									<div class="row">
-										<div class="col-sm-12">
-											<div class="form-group">
-												<textarea class="form-control" rows="8" id="comment"
-													placeholder="Message"></textarea>
-											</div>
-											<!--/.form-group-->
-										</div>
-										<!--/.col-->
-									</div>
-									<!--/.row-->
-									<div class="row">
-										<div class="col-sm-12">
-											<div class="single-contact-btn">
-												<a class="contact-btn" href="#" role="button">submit</a>
-											</div>
-											<!--/.single-single-contact-btn-->
-										</div>
-										<!--/.col-->
-									</div>
-									<!--/.row-->
-								</form>
-								<!--/form-->
-							</div>
-							<!--/.contact-form-->
-						</div>
-						<!--/.single-contact-box-->
-					</div>
-					<!--/.col-->
-					<div class="col-md-offset-1 col-md-5 col-sm-6">
-						<div class="single-contact-box">
-							<div class="contact-adress">
-								<div class="contact-add-head">
-									<h3>sarra tavakoli</h3>
-									<p>Software Developer</p>
-								</div>
-								<div class="contact-add-info">
-									<div class="single-contact-add-info">
-										<h3>location</h3>
-										<p>kansas city, missouri</p>
-									</div>
-									<div class="single-contact-add-info">
-										<h3>website</h3>
-										<p><a href="www.stavakoli.net">www.stavakoli.net</a></p>
-									</div>									
-								</div>
-							</div>
-							<!--/.contact-adress-->
-							<div class="hm-foot-icon">
-								<ul>
-									<li><a href="https://github.com/sarratavakoli"><i class="fa fa-github"></i></a></li>
-									<!--/li-->
-									<li><a href="https://www.linkedin.com/in/sarratavakoli/"><i
-												class="fa fa-linkedin"></i></a></li>
-									<!--/li-->
-								</ul>
-								<!--/ul-->
-							</div>
-							<!--/.hm-foot-icon-->
-						</div>
-						<!--/.single-contact-box-->
-					</div>
-					<!--/.col-->
-				</div>
-				<!--/.row-->
-			</div>
-			<!--/.contact-content-->
-		</div>
-		<!--/.container-->
+<section id="contact" class="contact">
+    <div class="section-heading text-center">
+        <h2>contact me</h2>
+    </div>
+    <div class="container">
+        <div class="contact-content">
+            <div class="row">
+                <div class="col-md-offset-1 col-md-5 col-sm-6">
+                    <div class="single-contact-box">
+                        <div class="contact-form">
+                            <!-- form -->
+                            <form asp-action="Contact">
 
-	</section>
-	<!--/.contact-->
-	<!--contact end -->
+                                <div class="row">
+
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                                    <div class="col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            <input asp-for="Name" class="form-control" id="name" placeholder="Name*"
+                                                   name="name" />
+                                            <span asp-validation-for="Name" class="text-danger"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            <input asp-for="Email" class="form-control" id="email" placeholder="Email*"
+                                                   name="email" />
+                                            <span asp-validation-for="Email" class="text-danger"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            <input asp-for="Subject" class="form-control" id="subject"
+                                                   placeholder="Subject*" name="subject" />
+                                            <span asp-validation-for="Subject" class="text-danger"></span>
+                                        </div>
+                                    </div>
+                                </div> <!--end row-->
+
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <textarea asp-for="Message" class="form-control"
+                                                      rows="8" id="comment" placeholder="Message*"></textarea>
+                                            <span asp-validation-for="Message" class="text-danger"></span>
+                                        </div>
+                                        <!--/.form-group-->
+                                    </div>
+                                    <!--/.col-->
+                                </div>
+                                <!--/.row-->
+
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="single-contact-btn">
+                                            @*<a class="contact-btn" href="#" role="button">submit</a>*@
+                                            @*<div class="form-group">*@
+                                                <input type="submit" value="Send" class="clean-input"/>
+                                            @*</div>*@
+                                        </div>
+                                        <!--/.single-single-contact-btn-->
+                                    </div>
+                                    <!--/.col-->
+                                </div>
+                                <!--/.row-->
+
+                            </form>
+                            <!--/form-->
+                        </div>
+                        <!--/.contact-form-->
+                    </div>
+                    <!--/.single-contact-box-->
+                </div>
+                <!--/.col-->
+                <div class="col-md-offset-1 col-md-5 col-sm-6">
+                    <div class="single-contact-box">
+                        <div class="contact-adress">
+                            <div class="contact-add-head">
+                                <h3>sarra tavakoli</h3>
+                                <p>Software Developer</p>
+                            </div>
+                            <div class="contact-add-info">
+                                <div class="single-contact-add-info">
+                                    <h3>location</h3>
+                                    <p>kansas city, missouri</p>
+                                </div>
+                                <div class="single-contact-add-info">
+                                    <h3>website</h3>
+                                    <p><a href="www.stavakoli.net">www.stavakoli.net</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/.contact-adress-->
+                        <div class="hm-foot-icon">
+                            <ul>
+                                <li><a href="https://github.com/sarratavakoli"><i class="fa fa-github"></i></a></li>
+                                <!--/li-->
+                                <li>
+                                    <a href="https://www.linkedin.com/in/sarratavakoli/">
+                                        <i class="fa fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <!--/li-->
+                            </ul>
+                            <!--/ul-->
+                        </div>
+                        <!--/.hm-foot-icon-->
+                    </div>
+                    <!--/.single-contact-box-->
+                </div>
+                <!--/.col-->
+            </div>
+            <!--/.row-->
+        </div>
+        <!--/.contact-content-->
+
+
+
+    </div>
+    <!--/.container-->
+
+</section>
+<!--/.contact-->
+<!--contact end -->
+
+
+@*
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Contact">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Subject" class="control-label"></label>
+                <input asp-for="Subject" class="form-control" />
+                <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Message" class="control-label"></label>
+                <textarea asp-for="Message" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
+</div>
+*@
+
+@section Scripts {
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
+}
