Added all portfolio items with links and descriptions

--- a/MVC-PersonalSite/MVC-PersonalSite/Views/Home/Index.cshtml
+++ b/MVC-PersonalSite/MVC-PersonalSite/Views/Home/Index.cshtml
@@ -502,54 +502,58 @@
 						<div class="row">
 
 							<div class="col-sm-4">
-								<div class="item">
-									<a href="#">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image" />
+								<div class="item portfolio-shadow">
+									<a href="https://github.com/sarratavakoli/ToDo" target="_blank" rel="noreferrer">
+										<img src="assets/images/portfolio/todo.jpg" alt="portfolio image" />
 										<div class="isotope-overlay">
-												text game<BR>
-												coming soon
+												ToDo List<BR>
+												React App <br />
+												using custom DB & API
 										</div><!-- /.isotope-overlay -->
 									</a>
 								</div><!-- /.item -->
-								<div class="item">
-									<a href="#">
-										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image" />
+								<div class="item portfolio-shadow">
+									<a href="https://github.com/sarratavakoli/ToDoAPI" target="_blank" rel="noreferrer">
+										<img src="assets/images/portfolio/api.jpg" alt="portfolio image" />
 										<div class="isotope-overlay">
-												storefront<BR>
-												coming soon
+												Custom API<BR>
+												Created for use with <br />
+												ToDo list React App
 									</div><!-- /.isotope-overlay -->
 									</a>
 								</div><!-- /.item -->
 							</div><!-- /.col -->
 
 							<div class="col-sm-4">
-								<div class="item">
-									<a href="#">
+								<div class="item portfolio-shadow">
+									<a href="https://github.com/sarratavakoli/bartender" target="_blank" rel="noreferrer">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image" />
 										<div class="isotope-overlay">
-												to do API<BR>
-												coming soon
+												Text-Based Adventure Game<BR>
+												C# Console App
 									</div><!-- /.isotope-overlay -->
 									</a>
 								</div><!-- /.item -->
 							</div><!-- /.col -->
 
 							<div class="col-sm-4">
-								<div class="item">
-									<a href="#">
-										<img src="assets/images/portfolio/p4.jpg" alt="portfolio image" />
+								<div class="item portfolio-shadow">
+									<a href="https://github.com/sarratavakoli/StoreFront" target="_blank" rel="noreferrer">
+										<img src="assets/images/portfolio/storefront.jpg" alt="portfolio image" />
 										<div class="isotope-overlay">
-												react to do <BR>
-												coming soon
+												Mock Storefront <BR>
+												.NET MVC App using <br />
+												custom DB and Bootstrap
 										</div><!-- /.isotope-overlay -->
 									</a>
 								</div><!-- /.item -->
-								<div class="item">
-									<a href="#">
-										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image" />
+								<div class="item portfolio-shadow">
+									<a href="https://github.com/CentriqFullStackHack/PumpkinRun" target="_blank" rel="noreferrer">
+										<img src="assets/images/portfolio/pumpkinrun.jpg" alt="portfolio image" />
 										<div class="isotope-overlay">
-												SAT project<BR>
-												coming soon
+												Live MVC Site for PumpkinRun.org<BR>
+												Bootcamp Final Project,<br/>
+												completed as a team
 									</div><!-- /.isotope-overlay -->
 									</a>
 								</div><!-- /.item -->
@@ -568,7 +572,7 @@
 	<!--/.portfolio-->
 	<!--portfolio end -->
 
-	<!--portfolio copy start -->
+	@*<!--links start -->
 	<section id="links" class="portfolio alternatebg">
 		<div class="portfolio-details">
 			<div class="section-heading text-center">
@@ -662,11 +666,12 @@
 			</div>
 			<!--/.container-->
 		</div>
-		<!--/.portfolio-details-->
+		<!--/.links end-->
 
 	</section>
-	<!--/.portfolio-->
-	<!--portfolio copy end -->
+	<!--links end -->*@
+
+
 
 	<!-- old links start -->
 	@*<section id="links" class="portfolio">
