--- a/MVC-PersonalSite/MVC-PersonalSite/Views/Shared/_Layout.cshtml
+++ b/MVC-PersonalSite/MVC-PersonalSite/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
 					<div class="container">
 						<!-- Start Header Navigation -->
 						<div class="navbar-header">
-							<img src="/assets/logo/star.png" class="spinny">							
+							<img src="~/assets/logo/star.png" class="spinny">							
 							<button type="button" class="navbar-toggle" data-toggle="collapse"
 								data-target="#navbar-menu">
 								<i class="fa fa-bars"></i>
@@ -104,12 +104,7 @@
 								
 								<li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? "" : "smooth-menu")">
 									<a href="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? $"{@Url.Action("Index", "Home")}#portfolio" : "#portfolio")">portfolio</a>
-								</li>
-
-								
-								<li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? "" : "smooth-menu")">
-									<a href="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? $"{@Url.Action("Index", "Home")}#links" : "#links")">links</a>
-								</li>
+								</li>								
 
 								<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 							</ul>
